<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Broken Screen Prank: Crack Display</string>
    <string name="install">Install</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_language">Choose Language</string>
    <string name="done">Done</string>
    <string name="search_language">Search language...</string>
    <string name="how_it_works">How It Works</string>
    <string name="step_01">01</string>
    <string name="choose_an_effect">Choose an Effect</string>
    <string name="choose_an_effect_desc">Browse available broken screen\neffects and select your preferred prank\nstyle.</string>
    <string name="step_02">02</string>
    <string name="configure_trigger">Configure Trigger</string>
    <string name="configure_trigger_desc">Choose how the prank should start.</string>
    <string name="touch">TOUCH</string>
    <string name="shake">SHAKE</string>
    <string name="timer">TIMER</string>
    <string name="start_prank">Start Prank</string>
    <string name="step_03">03</string>
    <string name="trigger_prank">Trigger Prank</string>
    <string name="trigger_prank_desc">Return to the home screen and\nperform the action to activate.</string>
    <string name="trigger_prank_hint">\"The screen will \'crack\' instantly when\ntouched\"</string>
    <string name="step_04">04</string>
    <string name="turn_off_effect">Turn Off Effect</string>
    <string name="turn_off_effect_desc">When you\'re done pranking:</string>
    <string name="open_the_app_again">Open the app again</string>
    <string name="use_the_notification">Use the notification</string>
    <string name="got_it_let_s_go">Got it, Let\'s Go!</string>
    <string name="need_more_help_visit_support">Need more help? Visit Support</string>
    <string name="desc_back">Back</string>
    <string name="desc_help">Help</string>
    <string name="desc_gallery_preview">Gallery Preview</string>
    <string name="desc_phone_illustration">Phone Illustration</string>
    <string name="desc_trigger">Trigger</string>
    <string name="broken_screen">Broken Screen</string>
    <string name="choose_your_effect">Choose Your Effect</string>
    <string name="select_a_realistic_effect">Select a realistic broken screen effect.</string>
    <string name="preview_effect">Preview Effect</string>
    <string name="choose_activation_method">Choose Activation Method</string>
    <string name="touch_title">Touch</string>
    <string name="touch_desc">Tap screen to activate instantly.</string>
    <string name="shake_title">Shake</string>
    <string name="shake_desc">Shake device to trigger the prank.</string>
    <string name="timer_title">Timer</string>
    <string name="timer_desc">Activate automatically after a delay.</string>
    <string name="pro_tip">Pro Tip</string>
    <string name="pro_tip_desc">Touch mode creates the most realistic prank\nreactions when handing your phone to a friend.</string>
    <string name="ready_to_fool_your_friends">READY TO FOOL YOUR FRIENDS?</string>

    <string name="off">OFF</string>
    <string name="time_10s">10s</string>
    <string name="time_15s">15s</string>
    <string name="time_20s">20s</string>
    <string name="time_30s">30s</string>
    <string name="time_1m">1m</string>
    <string name="time_2m">2m</string>

    <string name="desc_previous_effect">Previous effect</string>
    <string name="desc_current_effect">Current effect</string>
    <string name="desc_crack_overlay">Crack overlay</string>
    <string name="desc_next_effect">Next effect</string>
    <string name="desc_touch_icon">Touch Icon</string>
    <string name="desc_selected">Selected</string>
    <string name="desc_shake_icon">Shake Icon</string>
    <string name="desc_timer_icon">Timer Icon</string>
    <string name="desc_tip_icon">Tip Icon</string>
    <string name="back">Back</string>
    <string name="select_a_realistic_broken_screen_effect">Select a realistic broken screen effect.</string>
    <string name="tap_screen_to_activate_instantly">Tap screen to activate instantly.</string>
    <string name="shake_device_to_trigger_the_prank">Shake device to trigger the prank.</string>
    <string name="activate_automatically_after_a_delay">Activate automatically after a delay.</string>
    <string name="touch_mode_creates_the_most_realistic_prank_reactions_when_handing_your_phone_to_a_friend">Touch mode creates the most realistic prank reactions when handing your phone to a friend.</string>
    <string name="fakebroken">FakeBroken</string>
    <string name="prank_your_friends_with_realistic_screen_cracks_and_damage_effects">Prank your friends with realistic screen cracks and damage effects.</string>
    <string name="quick_actions">⚡ Quick Actions</string>
    <string name="spider_crack">Spider Crack</string>
    <string name="touch_effects">Touch Effects</string>
    <string name="bullet_effects">Bullet Effects</string>
    <string name="led_effects">LED Effects</string>
    <string name="popular_effects">Popular Effects</string>
    <string name="see_all">See All</string>
    <string name="ad">AD</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="help_amp_usage"><![CDATA[Help & Usage]]></string>
    <string name="how_to_use_the_effect">How to use the effect</string>
    <string name="learn_how_to_activate_prank_effects">Learn how to activate prank effects</string>
    <string name="effect_preferences">Effect Preferences</string>
    <string name="vibrate_on_break">Vibrate on break</string>
    <string name="haptic_feedback_for_realistic_impact">Haptic feedback for realistic impact</string>
    <string name="change_language">Change Language</string>
    <string name="english_us">English (US)</string>
    <string name="support_amp_feedback"><![CDATA[Support & Feedback]]></string>
    <string name="rate_app">Rate App</string>
    <string name="share_your_experience_with_us">Share your experience with us</string>
    <string name="share_to_friends">Share to Friends</string>
    <string name="invite_friends_to_try_the_prank">Invite friends to try the prank</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="how_we_handle_your_data">How we handle your data</string>
    <string name="share_amp_prank"><![CDATA[Share & Prank]]></string>
    <string name="give_your_friends_a_nlittle_scare">Give Your Friends a\nLittle Scare 😱</string>
    <string name="share_the_app_and_surprise_your_friends_nwith_realistic_broken_screen_prank_effects">Share the app and surprise your friends\nwith realistic broken screen prank effects.</string>
    <string name="scan_amp_install"><![CDATA[SCAN & INSTALL]]></string>
    <string name="friends_can_scan_this_code_to_instantly_download_nthe_prank_app">Friends can scan this code to instantly download\nthe prank app.</string>
    <string name="share_link">Share Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="why_share">Why Share?</string>
    <string name="easy_qr_download">Easy QR download</string>
    <string name="realistic_crack_effects">Realistic crack effects</string>
    <string name="funny_reactions_guaranteed">Funny reactions guaranteed</string>
    <string name="quick_prank_setup">Quick prank setup</string>
    <string name="english">English</string>
    <string name="united_states">United States</string>
    <string name="_01">01</string>
    <string name="browse_available_broken_screen_effects_and_select_your_preferred_prank_style">Browse available broken screen effects and select your preferred prank style.</string>
    <string name="_02">02</string>
    <string name="choose_how_the_prank_should_start">Choose how the prank should start.</string>
    <string name="return_to_the_home_screen_and_perform_the_action_to_activate">Return to the home screen and perform the action to activate.</string>
    <string name="when_you_re_done_pranking">When you\'re done pranking:</string>
    <string name="loading">Loading</string>
    <string name="prank_people">Prank People</string>
    <string name="create_realistic_broken_screen_effects_and_surprise_your_friends_with_hilarious_reactions">Create realistic broken screen effects and surprise your friends with hilarious reactions.</string>
    <string name="around_you">Around You</string>
    <string name="realistic_broken">Realistic Broken</string>
    <string name="screen_effect">Screen Effect</string>
    <string name="enjoy_sharp_crack_visuals_and_glass_damage_effects_that_look_real_enough_to_prank_your_friends">Enjoy sharp crack visuals and glass damage effects that look real enough to prank your friends.</string>
    <string name="everyone_thinks_your">Everyone Thinks Your</string>
    <string name="phone_is_broken">Phone Is Broken</string>
    <string name="make_your_screen_look_cracked_for_real_and_watch_people_react_like_your_phone_is_actually_damaged">Make your screen look cracked for real and watch people react like your phone is actually damaged.</string>
    <string name="led_color_screen">LED Color Screen</string>
    <string name="default_text">DEFAULT</string>
</resources>